--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,11 @@ body {
         width: 100%;
 
         img {
+            border-radius: 6px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
             width: 100%;
             height: 100%;
-            border-radius: 7px;
         }
     }
 
@@ -44,6 +46,8 @@ body {
 
         h1 {
             text-align: center;
+            padding: 5px;
+            margin-bottom: 20px;
         }
 
         #contenedorCaracteristicas {
