--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
 }
 
 #carta {
-    width: 23%;
-    height: 65%;
+    width: 26%;
+    height: 68%;
 
     border: 7px solid gold;
     border-radius: 10px;
@@ -42,7 +42,14 @@ body {
         border-bottom-left-radius: 0px;
         border-bottom-right-radius: 0px;
 
-        background: linear-gradient(to bottom, #000000, #ff4500, #ff8c00);
+        background: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #ff4500 75%,
+            #ff8c00 100%
+
+        );
+
 
         h1 {
             text-align: center;
@@ -52,13 +59,16 @@ body {
 
         #contenedorCaracteristicas {
             display: flex;
-            justify-content: space-between;
-
+            justify-content: space-evenly;
             flex-wrap: wrap;
 
             div {
-                border: 1px solid #fff;
+                padding: 3px 6px;
+                border: 3px solid #000;
                 border-radius: 5px;
+
+                width: 42%;
+                margin-bottom: 5px;
             }
         }
     }
