--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
     align-items: center;
 
     color: #fff;
+
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 #carta {
@@ -38,23 +40,34 @@ body {
         height: 55%;
         width: 100%;
 
+        background: linear-gradient(
+            to bottom,
+            #000000 0%,
+            #000001 25%,
+            #ff4500 65%,
+            #ff8c00 100%
+        );
+
         padding: 20px;
         border-bottom-left-radius: 0px;
         border-bottom-right-radius: 0px;
 
-        background: linear-gradient(
-            to bottom,
-            #000000 0%,
-            #ff4500 75%,
-            #ff8c00 100%
+        #cajaPresentacion {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
 
-        );
+            h1 {
+                width: 40%;
+                text-align: center;
+                padding: 5px;
+                margin-bottom: 20px;
+            }
 
-
-        h1 {
-            text-align: center;
-            padding: 5px;
-            margin-bottom: 20px;
+            img{
+                width: 30px;
+                height: 30px;
+            }
         }
 
         #contenedorCaracteristicas {
@@ -63,8 +76,10 @@ body {
             flex-wrap: wrap;
 
             div {
+                font-size: 13px;
+                font-weight: bold;
                 padding: 3px 6px;
-                border: 3px solid #000;
+                border: 2.5px solid #000;
                 border-radius: 5px;
 
                 width: 42%;
